# ospray_viewer

./: CMakeLists.txt  channel_flow_camera.txt  dataLoader.h  isosurfaces.cpp  jet_color.txt  multi_ts_gen_images.cpp  ospray_camera.h  ospray_volume.h  random_spheres.cpp  running.txt  single_ts_gen_images.cpp  testUnstructured.cpp  txt2numpy.py  viewer.cpp
camera_info/: input.txt  isosurface_cameras.txt  random_sphere_camers.txt  view.npy
utils/: ArcballCamera.h  CMakeLists.txt  ParamReader.cpp  ParamReader.h  callbacks.cpp  callbacks.h  embedded_colormaps.h  parseArgs.cpp  parseArgs.h  properties.cpp  properties.h  shader.h  transfer_function_widget.cpp  transfer_function_widget.h  widget.cpp  widget.h
